objects/wkitsm__RootCause__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Parent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>RootCauses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__PrimaryCI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary CI</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>RootCauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__PrimaryCause__c</fullName>
        <label>Primary Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capacity Issue</fullName>
                </value>
                <value>
                    <fullName>Component Failure</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Human Error</fullName>
                </value>
                <value>
                    <fullName>Process Failure</fullName>
                </value>
                <value>
                    <fullName>Software Bug - App</fullName>
                </value>
                <value>
                    <fullName>Software Bug - OS</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__RootCause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Analyzed</fullName>
                </value>
                <value>
                    <fullName>Solution Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Root Cause</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Root Cause Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Causes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>